--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "lite-server",
+    "gn": "ganache-cli"
   },
   "repository": {
     "type": "git",
@@ -15,11 +17,13 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "ganache-cli": "^2.0.2"
-  },
   "bugs": {
     "url": "https://github.com/mzhKU/reptoken/issues"
   },
-  "homepage": "https://github.com/mzhKU/reptoken#readme"
+  "homepage": "https://github.com/mzhKU/reptoken#readme",
+  "dependencies": {
+    "ganache-cli": "^6.0.3",
+    "lite-server": "^2.3.0",
+    "web3": "^0.3.0"
+  }
 }
